archive/同事V10系列/V10.5/转手文档/01-项目转手交接文档.md
# 亲成（原 KOKALabel）吊牌报价系统 · 项目转手交接文档

> 交接日期：2026-09-11 ｜ 当前版本：**v10.5.0（已上线）** ｜ 线上：https://kokalabel-quote.pages.dev
> 本文档面向接手本项目的 AI agent / 开发者，目标是看完即可独立操作。配合《02-项目总结文档》《03-版本日志-V9.6至V10.3》《04-工作日志-2026-09-08至09-10》使用。
> 品牌说明：**显示文案已全面改为「亲成」**；代码内部标识符（KOKA 对象、KOKA_AUTH KV、tagPricing_ 存储前缀、koka* 类名）一律保留原名——它们关系到用户数据与云端兼容，**不要改**。

---

## 一、项目一句话概述

吊牌印刷在线报价系统，纯前端单页应用（HTML+CSS+JS，零依赖、零构建），可选挂接 Cloudflare Pages 实现登录鉴权 + 云端默认数据共享。服务对象：KOKALabel 吊牌厂的销售/管理员。

## 二、三种运行形态

| 形态 | 入口 | 登录 | 云同步 | 说明 |
|---|---|---|---|---|
| 本地 file:// | 双击 index.html | ❌ 免登录（auth.js 只在 http 生效） | ❌ | 单机使用，全部数据存 localStorage |
| 网页版 | https://kokalabel-quote.pages.dev | ✅ 强制登录 | ✅ 10 秒轮询 | 生产环境（Cloudflare Pages + Functions + KV） |
| exe | electron-build/（打包层，授权 enabled=false，未启动） | ❌ | ❌ | 桌面版，暂搁置 |

## 三、目录地图（重要）

```
E:\报价系统7.9\
├─ KOKALabel报价系统-v7.8\        ← ★源码仓库（git，当前分支 v9.9-dev）
│   ├─ index.html                 ← 单页入口（~1140 行，所有页面 DOM）
│   ├─ login.html                 ← 登录页（网页版）
│   ├─ js/
│   │   ├─ data.js（~10700 行）    ← 默认报价数据 + localStorage 加载 + 版本迁移链
│   │   ├─ app.js（~4600 行）      ← 全部业务逻辑（计算/渲染/交互/导入导出）
│   │   └─ auth.js（~300 行）      ← 登录/角色/云端同步（仅 http 生效）
│   ├─ css/style.css（~3100 行）   ← 全部样式（文件尾有 v9.7/v9.8 覆盖段）
│   ├─ functions/                 ← CF Pages Functions（api：登录/账号/报价）
│   ├─ docs/plans/                ← SOP 手册、部署说明、重构记录文档
│   ├─ CHANGELOG.md               ← v8.4.0 ~ v9.9.0 变更日志
│   └─ tests/、_headers、robots.txt、favicon 等
├─ .workbuddy\memory\             ← ★工作记忆（MEMORY.md 长期记忆 + 2026-09-XX.md 日志）
├─ electron-build\                ← exe 打包层（授权 v9.2，enabled=false，暂搁置）
├─ KOKALabel1楼_20260909.xlsx     ← v9.5.1 数据源附件（留档）
└─ KOKALabel报价系统-v7.8.zip     ← 早期快照

C:\Users\Mayn\Desktop\KL\
├─ 9ge tebieban\                 ← ★近期版本归档（用户指定）
│   ├─ 9.7.1\  9.8\  9.9\        ← 各版本完整生产包（index/login/css/js/functions/_headers/favicon/robots），均经 MD5 校验
│   └─ 转手\                     ← 本三份文档
├─ V9\{9.0,9.2,9.3,9.4,9.5,9.6}\ ← 早期版本归档（每份含完整 .git 历史）
└─ 网站使用SOP手册.md             ← 面向使用者的操作手册
```

## 四、技术架构

### 4.1 前端（无框架、无构建）
- 全部业务在 4 个文件：index.html（结构）、app.js（逻辑）、data.js（数据）、style.css（样式）。
- 页面切换：`switchPage(pageName)` 切换 `.page.active`（计算器/报价表组查询/个人主页）。
- **换皮不换骨原则**：历次 UI 重构全部保留元素 id 与业务逻辑，只动布局与 CSS。接手改 UI 时必须遵守。

### 4.2 数据层（localStorage）
存储键统一带前缀 `tagPricing_`（saveToStorage/loadFromStorage 自动加）：

| 键 | 内容 |
|---|---|
| paperConfig | 纸张报价数据（33 组 1 楼 + 10 张 3 楼，每组含各档位价格/直接系数/specs） |
| craftConfig | 附加工艺（按纸张 id 分组，36 组） |
| ropeConfig | 吊绳 27 组，v9.9 起为倍数制（1000 基准，500=1000 同价） |
| shippingConfig | 邮费 9 地区（basePrices 各档 / 超 10000 重量×系数） |
| priceLists / currentPriceListId | 报价表组列表与当前组 |
| customerLevels | 客户层级（普通/优质/大客户，可改名+系数） |
| appProfile | 个人主页设置（默认档位/吊绳/纸张/尺寸类型/小数位） |
| **dataVersion** | 迁移链基线，**当前 9.9.0**（注意：≠ UI 版本号！） |
| uiLayoutMode | UI 架构模式（v9.8：auto/flat/vertical，按设备存储） |

### 4.3 版本迁移链（data.js 尾部，IIFE 顺序执行）
- 每个迁移 = 一个 IIFE：读 dataVersion → `verCompare(dataVersion, "X") >= 0` 则跳过 → 改 localStorage（必要时同时重赋内存变量）→ 写入新 dataVersion。
- 迁移链：… → migrateFloor1V951(9.5.1) → **migrateRopeV99(9.9.0，最新)**
- ⚠️ 坑：迁移守卫曾被 sed 污染导致被跳过（migrateRename900Paper 已删除）。新增迁移必须：guard 用 verCompare、同时更新内存变量与存储、append 到链尾。

### 4.4 云端体系（网页版）
- **账号**：CF Pages Functions + Workers KV（namespace `KOKA_AUTH`，绑定名 AUTH）。键 `u:*`（用户，PBKDF2 100K 哈希）、`s:*`（会话）、`q:v1`（全局默认报价数据）。
- **角色**：superadmin > admin > sales > visitor（旧 role:user 自动归一 sales）。规则：管理员互管不删自己、默认保留 ≥1 管理员、停用即时生效。
- **云端默认数据流**：超管在「报价表组查询」页点「↑保存为全局默认」→ POST /api/quote → KV q:v1 → **所有角色每 10 秒** syncCloudQuote() 检测 updatedAt 变化 → toast 提示 1 秒后 location.reload()。
- **首次部署**需环境变量 SETUP_KEY / ADMIN_USER / ADMIN_PASS（创建初始 admin）。

## 五、当前版本状态（截至 2026-09-11）

| 项 | 状态 |
|---|---|
| 本地源码 | 目录 `C:\Users\Mayn\Desktop\KL\V10\V10.5`，版本 v10.5.0 |
| 线上（pages.dev） | **v10.5.0「亲成报价系统」**（09-11 部署并验证） |
| GitHub | main 已同步 v10.5.0（本次新增提交与 tag v10.5.0） |
| 归档 | KL\V10\{10.0,10.1,10.2,10.3,10.4,10.5}、9ge tebieban\{9.7.1,9.8,9.9,转手} |
| 云端 q:v1 | 已同步 v9.9 吊绳规则（26 组 500 档=1000 档）；v10.5 未改价格数据结构，无需重新发布（除非改过表头/价格，需手动点「保存为全局默认」）。改前备份：`E:\报价系统7.9\.workbuddy\cloud-quote-backup-20260910.json` |
| 品牌 | 显示文案=「亲成」；内部标识符 KOKA_/tagPricing_/KV 名保持 v9.x 原样（兼容） |

> **v10.4 说明**：`KL\V10\V10.4` 是 v10.3.0 的归档快照（源码版本串仍为 10.3.0），非独立版本；V10.5 由它复制而来。

### v10.5.0 本次改动（2026-09-11）
1. **纸张材质「下拉搜索」模式 → 双列网格弹窗 + 只显简称**：选项移除全称节点（改挂 `title`）、新增 `.paper-options-grid` 双列 Grid；主机端 `ui-vertical`（垂直纵深式）与电脑/平板 `ui-flat`（扁平化宽泛式）**均生效**。
2. **UI 溢出规范修复 5 处**：报价结果表格撑破整页（`.result-section` grid 隐式列）／手机端导航按钮挤出／手机端下拉弹窗下溢／桌面端备注 textarea 溢出／全局兜底。
3. 行尾符统一为 **LF**（修订中被编辑工具误转 CRLF 的 4 个文件已还原）。
4. 详见《03-版本日志-V10.5.md》与 `CHANGELOG.md` v10.5.0 条目。

### v10.x 关键功能地图（接手先看这里）
| 功能 | 位置 | 说明 |
|---|---|---|
| 个性化（字号） | 侧栏底部「Aa 个性化」→ 内联面板 | 四档 + 自定义 50~200% + 系统默认字号显示（16px 基准）+ 恢复默认；localStorage uiFontScale，全角色可用 |
| 吊绳折叠 | 计算器「吊绳类型」区 | 默认折叠；`.rope-fold:not(.open) .rope-list{display:none}` —— **折叠只控隐藏，勿再改展开 display**（曾覆盖 grid 致竖条 bug） |
| 纸张材质双模式 | 个人主页 → 纸张材质选择模式 | grid（芯片平铺，默认）/ dropdown（下拉模糊搜索，简称+全称芯片同行）；`.paper-option` 契约不变 |
| UI 架构模式 | 个人主页 → UI 架构模式 | auto/flat/vertical（body.ui-flat / ui-vertical），localStorage 按设备 |
| 纸张序号开关 | 个人主页 → 纸张材质序号 | 默认隐藏（APP_PROFILE.hidePaperIndex） |
| 表头/行列编辑 | 报价表组查询页（**仅超管 canEditQuote**） | 表内内联：档位 th 点击改名 / th ✕ 删列 / 表头 ＋ 加列；代码列（文本）与面积列可编辑；行尾 ✕ 删行 + 新增规格行；全部确认对话框 + 仅存本地，云端手动发布 |
| 标准报价工艺费 | calculate()（标准模式） | **工艺费并入纸张价再乘折扣**：`(纸张价+工艺费)×折扣(×面积系数)`；cost=纸张折后价(含工艺)+吊绳+邮费；工艺明细行标注「已含于纸张折后价」 |

## 六、关键业务规则（改逻辑前必读）

1. **报价计算**（app.js `calculate()`）：
   - 纸张：按面积定位规格代码 → 取档位价 → 乘客户折扣 → 面积 >10000mm² 且无对应面积代码时乘面积系数（面积/10000，四舍五入两位）。
   - **工艺费（v10.2 起，标准报价模式）**：工艺循环在纸张价之前完成，`(纸张价 + 工艺费) × 折扣`（再乘面积系数）；`craftTotal` 仅作明细展示，**不再单独计入 cost**。直接系数模式维持 v7.2 逻辑（`(纸张+工艺)×系数`，baseUnitPrice 不含工艺，勿重复并入）；批量直接报价纸张工艺直接叠加。
   - **吊绳（v9.9 倍数制）**：基准价 = rope.prices["1000"]（回退 500 档）；500 张=基准；其他档 = 基准 × (档位/1000)，Math.round 保留 2 位。任意档位可算。>1000 档明细行显示 `（¥基准/千张 × 倍数 = ¥结果）`。
   - 邮费三模式：固定档直查 / >10000 按重量×地区系数 / 中间档手动输入。
   - 批量直接报价纸张（batchDirect）：价格固定，不打折不乘面积系数，工艺费直接叠加。
2. **两种计价模式**：标准报价（v10.0 起默认，按钮在前）/ 直接系数计算，mode-btn 切换（localStorage currentCalcMode 记忆用户选择）。
3. **UI 架构模式（v9.8）**：body.ui-flat（桌面/iPad：左侧 sidenav + calc-grid 双栏）/ body.ui-vertical（手机：顶部横条 + 单栏卡片=垂直纵深式）。auto 模式按 UA 检测手机；个人主页-报价设置可手动切换（localStorage uiLayoutMode，按设备存储，不入云同步）。
4. **SKU 芯片**：纸张材质默认 sku-grid 直选芯片，全称放 title 悬浮；`.paper-option` 的 class 与 data-sheet/data-paper 属性是 onPaperChange 的契约，勿改。下拉模式（paperSelectMode=dropdown）复用 `startCellEdit` 无关的旧版 `togglePaperDropdown/filterPaperOptions/paperMatchesSearch`（这些函数曾为死代码，v10.1 复活）。
5. **价格表内联编辑机制**（v7.9 起，v10.3 扩展）：`startCellEdit`（文本/数值按 type 区分）→ `commitCellEdit`（数值相等短路 / 清空 / confirm 差异提示）→ `applyPriceEdit`（按 data-type 落盘 + saveToStorage）。新增编辑类型时三处都要加分支（参考 spec-code / spec-maxarea / tier-name）。

## 七、部署 SOP（Cloudflare Pages）

```bash
# 必须 wrangler v3（v4 不上传 Functions！）
cd E:\报价系统7.9\KOKALabel报价系统-v7.8
CLOUDFLARE_API_TOKEN=<用户提供，cfut_ 前缀一次性> \
npx wrangler@3.114.0 pages deploy . --project-name kokalabel-quote --branch main --commit-dirty=true
```
- 本机**无持久化凭据**（无 oauth 登录态），每次部署向用户要 token（v9.8 部署用过的 token 建议已轮换）。
- 部署后验证：`curl -s https://kokalabel-quote.pages.dev/ | grep -o "<title>[^<]*</title>"` 确认版本号。

## 八、GitHub 推送 SOP（有坑，必须按此操作）

**坑**：本机 hosts 文件（C:\Windows\System32\drivers\etc\hosts 第 93~122 行）把 github.com 系列全部指向 127.0.0.1，本机 443 有假服务 → TLS 握手必挂 `CRYPT_E_NO_REVOCATION_CHECK`。nslookup 正常，hosts 才是元凶（疑似"屏蔽摸鱼网站"工具写入）。

**绕行方案**（已验证可用，网络时好时坏需重试 2~3 次）：
```bash
env -u http_proxy -u https_proxy -u HTTP_PROXY -u HTTPS_PROXY \
git -c http.schannelCheckRevoke=false \
    -c http.curloptResolve="github.com:443:20.205.243.166" \
    push origin <分支/tag>
```
（绕代理 env + 跳过吊销检查 + 固定 GitHub 真实 IP。fetch/ls-remote 同理。）

远端：github.com/zly62612364469/kokalabel-quote（私有）。分支：main(=最新生产)、main-work(=v9.6.0 历史基线)、v9.4-roles(v9.4.5)、v9.5-redesign(废案)、v9.7-flat(v9.7.1)、v9.8-dev(=main)、v9.9-dev(本地未推)。tags：v9.4.0~v9.8.0 全量。

## 九、版本管理规范（血泪教训）

1. **版本号更新禁用 sed 全局替换**——v9.4.1~v9.5.2 的版本串全部静默失败。**必须用 python 精确替换**，串清单：`v=9.X.0`（资源引用）、`v9.X.0`（标题/注释）、`"9.X.0"`（app.js 备份 JSON version 字段）。data.js 的 dataVersion（9.9.0）与 UI 版本号含义不同，勿连带。
2. **改 HTML 必做 div 栈式配对校验**（曾漏 1 个闭合导致结构错位）——用正则抽标签栈模拟配对，全部标签 + 关键 id 清单断言。
3. JS 改完 `node --check` 三个 js 文件。
4. 流程惯例：从当前稳定分支切 `vX.Y-dev` 分支 → 改 → 校验 → commit（中文详细 message）→ 打 tag vX.Y.0 → 推 GitHub → 部署 CF → 复制生产包到 `Desktop\KL\9ge tebieban\vX.Y\` 并 MD5 校验 → CHANGELOG + docs/plans + .workbuddy/memory 日志。
5. **废案不删除**：v9.5-redesign、v9.7-flat 等分支/tag/归档全部保留。
6. `git add -A` 注意 .wrangler/（已 gitignore，别误提交）。
7. **版本号替换必须豁免 data.js 迁移串**（v10.0 再次踩中）：替换 `v=X.Y.Z` 时，data.js 的 `verCompare(dataVersion, "9.9.0")` / `saveToStorage("dataVersion", "9.9.0")` 是**数据迁移基线**，与 UI 版本号含义不同——例如升 v10.0 时它们不能被改成 "10.0.0"。脚本应只替换 `v=10.x`、`v10.x`、`"10.x"` 三种形态并对 data.js 单独确认。
8. **改 CSS 覆盖布局属性时先查原值**（v10.1 吊绳折叠踩坑）：`display:flex` 覆盖了原 `grid`（三列），导致展开后芯片被压成一行竖条。折叠类需求优先用 `:not(.open){display:none}` 只控隐藏，不干预展开时的布局属性。
9. **覆盖 `hidden` 属性的 CSS 会致"卡死"**（v10.1→v10.2）：`.modal-mask{display:flex}` 会覆盖 `[hidden]{display:none}`，遮罩常驻并拦截全部点击。用 class 控制显隐（`.panel.open`），不要依赖 hidden 属性 + 强制 display。

## 十、账号现状（敏感）

| 账号 | 角色 | 备注 |
|---|---|---|
| admin | superadmin | 密码用户自管，2026-09-09 起为 123456789（**弱密码，已多次建议加强**） |
| jianqing | sales | 业务员 |
| zls | visitor | 访客（仅计算器） |

- 我方（agent）不做密码保管；线上运维需用户提供密码或授权重置。
- CF API token：一次性，用后提醒用户轮换。

## 十一、常见任务操作手册

**① 更新某纸张价格**：网页版超管登录 → 报价表组查询 → 内联编辑价格 → 保存。或改 data.js DEFAULT（需配迁移或重发布云端默认）。
**② 发布云端默认**：超管登录 → 报价表组查询 → 「↑保存为全局默认（云端共享）」→ 全员 10 秒内自动刷新。
**③ 新版本发布全流程**：见第九节第 4 条。
**④ 回退线上**：Cloudflare Dashboard → Pages → kokalabel-quote → Deployments → 选上一版 Rollback；本地回退 `git checkout main-work`（v9.6.0）或 `git checkout v9.8-dev`（v9.8.0）。
**⑤ 恢复某版本生产包**：`Desktop\KL\9ge tebieban\{9.7.1,9.8,9.9}\` 直接可用（完整独立生产包）；`Desktop\KL\V9\{9.0~9.6}\` 含完整 git 历史。
**⑥ 新增迁移**：data.js 迁移链尾 append IIFE（guard + 改存储 + 改内存变量 + 写 dataVersion），参照 migrateRopeV99。

## 十二、当前待办 / 风险

1. ~~v9.9.0/v10.x 推送与部署~~ **全部完成（09-10 21:17）**：线上 = v10.3.0；GitHub main/tag/分支全同步。
2. admin 弱密码风险（123456789）——持续提醒。
3. hosts 屏蔽工具若持续开着，GitHub 操作永远要走第八节绕行方案；也可建议用户把 hosts 93~122 行删除/关掉屏蔽工具（未经用户同意不要动系统 hosts）。
4. electron exe 打包（授权后端）未启动，长期搁置。
5. UI 版本串历史遗留：main-work 分支 UI 文件版本为 9.4.0 时代（该分支已冻结，仅作回退基线，无需修）。
6. v10.x 表头/价格编辑仅存本地——**若用户改过表头或价格，需提醒在报价表组查询页点「↑ 保存为全局默认」才能同步到云端**（否则其他账号看不到）。

## 十三、文档与记忆索引

- `E:\报价系统7.9\.workbuddy\memory\MEMORY.md` —— 项目长期记忆（版本状态/坑位/账号/部署）
- `E:\报价系统7.9\.workbuddy\memory\2026-09-{08,09,10}.md` —— 每日工作日志（append-only）
- `CHANGELOG.md` —— 正式变更日志（v8.4.0~v9.9.0）
- `docs/plans/2026-09-08-flat-redesign.md` —— v9.7/v9.8/v9.9 重构记录（含需求对照表与回退方式）
- `docs/plans/2026-09-08-website-sop.md` —— 使用者 SOP
- `docs/plans/2026-09-09-calculator-redesign.md`（在 v9.5-redesign 分支上）—— v9.5 系列重构记录
- 本次交接三件套：`Desktop\KL\9ge tebieban\转手\`（01 交接 / 02 总结 / 03 日志）

> 新 agent 开工前动作：读 MEMORY.md + 最近日志 → `git status && git log --oneline -5` 确认分支状态 → 一切按第九节规范执行。
